<resources>
    <string name="app_name">MemoryApp</string>
    <string name="name">Name</string>
    <string name="insert_name">Insert name</string>
    <string name="help_info">Help info</string>
    <string name="insert_help">Insert help</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="title">Title</string>
    <string name="insert_title">Insert title</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="write_description">Write description</string>
    <string name="action_reset">Reset</string>
    <string name="up">Up</string>
    <string name="dbtest">DBtest</string>
    <string name="title_of_memory">title of memory</string>
    <string name="no_of_days_passed">no of days passed</string>
    <string name="facebook_ap_id">143977473093837</string>>
    <string name="facebook_login_app_protocol_scheme">fb143977473093837</string>
    <string name="share">Share</string>
    <string name="title_of_mem">Title of mem</string>
    <string name="who_s_there">Who\'s there?</string>
    <string name="mark_as_known">Mark as known</string>
    <string name="show_all_known">show all known</string>
    <string name="show_all_unknown">show all unknown</string>
    <string name="insert_lastname">Insert lastname</string>
    <string name="insert_first_name">insert first name</string>
    <string name="first_name">First name</string>
    <string name="name_of_the_friend">name of the friend</string>
    <string name="sort_new">Sort new first</string>
    <string name="sort_old">Sort old first</string>
    <string name="clear_memories">Clear all memories</string>
    <string name="title_activity_edit_moment">EditMoment</string>
</resources>
